# ripbits

./: .gitignore  Cargo.toml  README.md  desktop.sh  index.html  run-web.sh
backend/: Cargo.toml
backend/src/: main.rs
frontend/: Cargo.toml  index.html
frontend/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: main.rs
