[package]
name = "ripbits"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.6", features = ["desktop", "web"] }

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
